Modify css, js y html and delete img

--- a/quizz.html
+++ b/quizz.html
@@ -18,8 +18,8 @@
         
     </div>
     <div class="controls">
-        <botton id="star-btn" class="star-btn">Empezar</botton>
-        <botton id="next-btn" class="next-btn">Siguiente</botton>
+        <p id ="enlace" class="a">Gracias por jugar, ¿ Quieres volver a jugar?<br><a href="index.html" class="a">....Aquí....</a></p>
+        
     </div>
 
 
